# cmake_workspace

./: CMakeLists.txt  README.md  hello.cpp  test.py
src/: CMakeLists.txt  calculator.cpp  math_utils.cpp
src/1-opencv/: CMakeLists.txt  main.cpp
